corpus/c/type/case-01/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [type_mismatch] type or overload mismatch @ src/main.c:5:22
help: compare the expected type and actual argument at the call site
want: int
got : const char *
via : takes_int
| src/main.c:5:22
|     return takes_int(value);
|                      ^
debug: rule_id=rule.family.type_overload.structured_or_message
debug: matched_conditions=message_contains=passing argument, phase=semantic
details: --formed-explain | raw: --formed-raw